--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background: url(../img/bg2.jpg);
+    background: url(../img/bus.jpg);
     background-size: cover;
     background-attachment: fixed;
     font-family: Roboto;
